fix: spacings

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ nav p {
 }
 
 #presentation-section {
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -136,7 +137,7 @@ nav p {
   justify-content: space-evenly;
   background: var(--gray-gradient);
   min-height: 100vh;
-  padding: 0 0 3rem 0;
+  padding: 50px 0;
 }
 
 h2 {
